unpackaged/main/default/objects/Mesure_P_rim_tre_abdominal__c/Mesure_P_rim_tre_abdominal__c.object-meta.xml
<CustomObject>
    <label>Mesure Périmètre abdominal</label>
    <nameField>
        <displayFormat>MPA-{00000000}</displayFormat>
        <label>Nom de Mesure Périmètre abdominal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mesures Périmètre abdominal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>