unpackaged/main/default/objects/Mesure_P_rim_tre_abdominal__c/fields/Date_de_la_mesure__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_mesure__c</fullName>
    <label>Date de la mesure</label>
    <type>Date</type>
</CustomField>