unpackaged/main/default/objects/Mesure_P_rim_tre_abdominal__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Mesures Périmètre abdominal</relationshipLabel>
    <relationshipName>Mesures_P_rim_tre_abdominal</relationshipName>
    <type>Lookup</type>
</CustomField>