unpackaged/main/default/objects/Mesure_P_rim_tre_abdominal__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Mesures Périmètre abdominal</relationshipLabel>
    <relationshipName>Mesures_P_rim_tre_abdominal</relationshipName>
    <type>Lookup</type>
</CustomField>